--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -460,4 +460,28 @@
   year   = {2019},
 }
 
+@InProceedings{Deerwester1990,
+  author = {Scott Deerwester},
+  title  = {Indexing by latent semantic analysis},
+  year   = {1990},
+}
+
+@InProceedings{Landauer1997,
+  author = {Landauer and Dumais},
+  title  = {A solution to Plato's problem: The latent semantic analysis theory of acquisition, induction, and representation of knowledge},
+  year   = {1997},
+}
+
+@InProceedings{Jurafsky1998,
+  author = {Daniel Jurafsky and Noah Coccaro},
+  title  = {Automatic Detection of Discourse Structure for Speech Recognition and Understanding},
+  year   = {1998},
+}
+
+@InProceedings{Rehder1998,
+  author = {Rehder, B.},
+  title  = {Using Latent Semantic Analysis to assess knowledge: Some technical considerations},
+  year   = {1998},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
